# ficiel

./: .bazelrc  .editorconfig  .gitignore  BUILD.bazel  Dockerfile  MODULE.bazel  Makefile  WORKSPACE.bazel  main  renovate.json  sfml.bzl  sfml_simple.bzl
bazel/bazelrc/: .gitignore  common.bazelrc  user.bazelrc
bazel/toolchains/cc/: BUILD.bazel  llvm.bzl  llvm_transitive_deps.bzl  zstd.BUILD
bazel/versions/rules/: BUILD.bazel  rules_cc.bzl  rules_go.bzl  rules_python.bzl
ficiel/: BUILD.bazel
ficiel/src/: main.cc
generators/: demo0_full.py  demo1_full.py  demo2_full.py  graph_display.py  graphgen.py
include/driver/: BUILD.bazel  driver.h  env.h  events.h  window.h
include/graph/: BUILD.bazel  edge.h  graph.h  map.h  node.h
include/utils/: BUILD.bazel  config.h  location.h  tracing.h
include/utils/data_structures/: BUILD.bazel  string.h
make/: common.mk  flags.mk  lib.mk  logging.mk  utils.mk
tests/graph/: BUILD.bazel  graph_test.cc
tests/utils/: BUILD.bazel  string_test.cc  tracing_test.cc  utils_test.cc
tools/build_rules/: boost.bzl
