"""
Brings in third party dependencies via `bzlmod`,
Bazel's new dependency management system.
"""

module(
    name = "bazel-llvm",
    # authors = "pulanski",
    # description = "Compiler experiment built with C++, LLVM, and Bazel",
    compatibility_level = 1,
    version = "0.1.0",
    # bazel_compatibility = ">=5.3.2",
)

bazel_dep(name = "apple_rules_lint", version = "0.3.2")

linter = use_extension("@apple_rules_lint//lint:extensions.bzl", "linter")

# linter.configure(
#     name = "clang-tidy",
#     config = "//.clang-tidy",
# )

# linter.configure(
#     name = "clang-format",
#     config = "//.clang-format",
# )

# linter.configure(
#     name = "flake8",
#     config = "//.flake8",
# )

bazel_dep(name = "bazel_skylib", version = "1.3.0")
bazel_dep(name = "stardoc", repo_name = "io_bazel_stardoc", version = "0.5.3")
bazel_dep(name = "aspect_bazel_lib", version = "1.16.1")
bazel_dep(name = "abseil-cpp", repo_name = "com_google_absl", version = "20211102.0")
bazel_dep(name = "googletest", repo_name = "com_google_googletest", version = "1.11.0")
bazel_dep(name = "glog", repo_name = "com_google_glog", version = "0.5.0")
bazel_dep(name = "gflags", repo_name = "com_gflags_gflags", version = "2.2.2")
bazel_dep(name = "fmt", repo_name = "com_fmtlib_fmt", version = "8.1.1")
bazel_dep(name = "zlib", repo_name = "com_madler_zlib", version = "1.2.13")
bazel_dep(name = "rules_pkg", version = "0.7.0")
bazel_dep(name = "rules_go", repo_name = "io_bazel_rules_go", version = "0.35.0")
bazel_dep(name = "gazelle", repo_name = "bazel_gazelle", version = "0.28.0")
