# Load cc_binary from rules_cc

load("@rules_cc//cc:defs.bzl", "cc_binary")

# Declare cc_binary target

cc_binary(
    name = "main",
    srcs = glob(["src/*.cc"]),
    linkopts = [
        "-lsfml-graphics",
        "-lsfml-window",
        "-lsfml-system",
    ],
    deps = [
        "//include/driver",
        "//include/utils",
        "//third_party/fmt",
        "@com_google_absl//absl/status:statusor",
        "@sfml",
    ],
)
